--- a/views/layout.pug
+++ b/views/layout.pug
@@ -3,5 +3,6 @@ html
   head
     title= title
     link(rel='stylesheet', href='/stylesheets/style.css')
+    script(src="https://js.pusher.com/4.4/pusher.min.js")
   body
     block content
