--- a/public/stylesheets/style.css
+++ b/public/stylesheets/style.css
@@ -6,3 +6,6 @@ body {
 a {
   color: #00B7FF;
 }
+
+li { margin: 0 10px; display: inline; }
+ul.left { list-style: none outside none; margin:0; padding: 0; text-align: center; }
