changes to show client phone number

--- a/views/orders.pug
+++ b/views/orders.pug
@@ -29,7 +29,7 @@ block content
             =order.usernames
           li
             | Phone: 
-            =order.userphone
+            =order.user.phone
         p
           table
             each item in order.items
