--- a/views/orders.pug
+++ b/views/orders.pug
@@ -29,7 +29,8 @@ block content
             =order.usernames
           li
             | Phone: 
-            =order.user.phone
+            a(href="tel:#{order.user.phone}")
+              =order.user.phone
         p
           table
             each item in order.items
