changes to the order

--- a/views/orders.pug
+++ b/views/orders.pug
@@ -29,7 +29,7 @@ block content
             =order.usernames
           li
             | Phone: 
-            a(href="tel:#{order.user.phone}")
+            a(href="tel:+#{order.user.phone}")
               =order.user.phone
         p
           table
