--- a/views/layout.pug
+++ b/views/layout.pug
@@ -2,6 +2,8 @@ doctype html
 html
   head
     title= title
+    meta(name="viewport" content="initial-scale=1.0, user-scalable=no")
+    meta(charset="utf-8")
     link(rel='stylesheet', href='/stylesheets/style.css')
     link(rel="stylesheets" href="/stylesheets/pretty-print-json.css")
     script(src="https://code.jquery.com/jquery-3.3.1.min.js" 
